fix(timezone): fix timezone cut issues on mobile

--- a/components/views/settings/profile/card/Card.less
+++ b/components/views/settings/profile/card/Card.less
@@ -40,3 +40,20 @@
     }
   }
 }
+
+@media only screen and (max-width: @mobile-breakpoint) {
+  .profile-card {
+    &-body {
+      .profile-preferences {
+        &-timezone {
+          .timezone-list {
+            .items {
+              width: calc(100vw - 5rem) !important;
+              max-width: calc(100vw - 5rem) !important;
+            }
+          }
+        }
+      }
+    }
+  }
+}
